added forgot route

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
     "express": "^4.16.4",
-    "mongoose": "^5.4.11"
+    "mongoose": "^5.4.11",
+    "nodemon": "^1.18.10"
   }
 }
