--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
     "express": "^4.16.4",
+    "js-yaml": "^3.12.1",
     "mongoose": "^5.4.11"
   }
 }
