--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "docz-theme-default": "^0.13.7",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "googleapis": "27",
     "mocha": "^6.0.2",
+    "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.11",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
