--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
     "mongoose": "^5.4.11",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4"
   }
 }
