--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "infra-authentication-server",
   "scripts": {
     "start": "node src/app.js",
-    "docs:dev": "docz dev"
+    "docs:dev": "docz dev",
+    "test": "mocha"
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
@@ -11,14 +12,13 @@
     "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
     "express": "^4.16.4",
-<<<<<<< HEAD
-    "js-yaml": "^3.12.1",
-    "mongoose": "^5.4.11"
-=======
     "googleapis": "27",
+    "js-yaml": "^3.12.1",
+    "mocha": "^6.0.2",
     "mongoose": "^5.4.11",
     "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   },
   "husky": {
     "hooks": {
@@ -34,6 +34,5 @@
   "devDependencies": {
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4"
->>>>>>> 31c10042de2c891309d7895333848c2860a840fd
   }
 }
