Revert "Dev promote (#8)"
This reverts commit 55b73273c1a68fc2eb39610a92ad8315e26b2b86.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "infra-authentication-server",
   "scripts": {
-    "docs:dev": "docz dev",
     "start": "nodemon src/startServer.js",
     "docs:dev": "docz dev",
-    "test": "mocha"
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
@@ -21,7 +20,6 @@
     "node-fetch": "^2.3.0",
     "express-jwt": "^5.3.1",
     "googleapis": "27",
-    "js-yaml": "^3.12.1",
     "mocha": "^6.0.2",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.11",
