role changing working and config file parsing

--- a/src/config/defaultroles.yml
+++ b/src/config/defaultroles.yml
@@ -1,5 +1,11 @@
 roles:
-    heirarchy:
-        - superAdmin
+    root: 
         - admin
-        - generalUser
+        - supervisor
+        - guest
+    admin: 
+        - supervisor
+        - guest
+    supervisor: 
+        - guest
+    guest: 
