--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,8 @@ jobs:
         - run:
             command: |
               yarn test
+workflows:
+  version: 2
+  build-test:
+    jobs:
+      - backend_test
