--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
         - checkout
         - run:
             command: |
+              yarn install
               yarn test
 workflows:
   version: 2
