--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   backend_test:
       docker:
         - image: circleci/python:3.7
+      dependencies:
+        override:
+          - echo $PATH
       steps:
         - checkout
         - run:
