--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,15 @@ jobs:
       steps:
         - checkout
         - run:
+            name: install
             command: |
+              sudo npm install -g yarn
               yarn install
               yarn test
+        # - run:
+        #     command: |
+        #       yarn install
+        #       yarn test
 workflows:
   version: 2
   build-test:
