--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
         - run:
             name: install
             command: |
-              sudo npm install -g yarn
+              cd test
               yarn install
               yarn test
         # - run:
