--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
         - checkout
         - run:
             command: |
-              yarn install
               cd test
-              yarn test
+              npm install
+              npm run test
 workflows:
   version: 2
   build-test:
