--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
@@ -14,16 +15,14 @@
     "docz-theme-default": "^0.13.7",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.0",
-    "jwt-decode": "^2.2.0",
-    "mongoose": "^5.4.11",
-    "node-fetch": "^2.3.0",
     "express-jwt": "^5.3.1",
     "googleapis": "27",
     "js-yaml": "^3.12.1",
-    "mocha": "^6.0.2",
     "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^2.2.0",
+    "mocha": "^6.0.2",
     "mongoose": "^5.4.11",
+    "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2"
