Config for security question & gmail

--- a/src/config/defaultroles.yml
+++ b/src/config/defaultroles.yml
@@ -9,3 +9,10 @@ roles:
     supervisor: 
         - guest
     guest: 
+
+# Note that you MUST have either security question or 
+# gmail sent to true
+security_question:
+    true
+gmail:
+    false
