[WIP] Google setup (#39)
* setup docs

* y u no work

* send responses

--- a/src/config/defaultroles.yml
+++ b/src/config/defaultroles.yml
@@ -10,6 +10,8 @@ roles:
         - guest
     guest: 
 
+useGoogleAuth: true
+
 # Note that you MUST have either security question or 
 # gmail sent to true
 security_question:
