--- a/config/defaultroles.yml
+++ b/config/defaultroles.yml
@@ -11,4 +11,4 @@ roles:
     guest: 
 
 test_db:
-    mongodb://product:infra28@ds111441.mlab.com:11441/auth-infra-server-test
+    "mongodb://product:infra28@ds111441.mlab.com:11441/auth-infra-server-test"
