--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^2.2.0",
     "mocha": "^6.0.2",
     "mongoose": "^5.4.11",
+    "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
