--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
     "dotenv": "^6.2.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "googleapis": "27",
@@ -24,6 +27,7 @@
     "mongoose": "^5.4.11",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
+    "node-pre-gyp": "^0.12.0",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2"
