--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
-    "bcrypt": "^3.0.4",
+    "bcrypt": "3.0.0",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
