--- a/now.json
+++ b/now.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "name": "h4i-infra-server",
-  "builds": [
-    { "src": "src/App.js", "use": "@now/node" },
-    { "src": "src/config/defaultroles.yml", "use": "@now/static" }
-  ],
+  "builds": [{ "src": "src/App.js", "use": "@now/node" }],
   "routes": [{ "src": "/(.*)", "dest": "src/App.js" }]
 }
