--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "express-validator": "^5.3.1",
     "googleapis": "27",
     "js-yaml": "^3.12.1",
     "jsonwebtoken": "^8.5.0",
