--- a/config/defaultroles.yml
+++ b/config/defaultroles.yml
@@ -10,6 +10,8 @@ roles:
         - guest
     guest: 
 
+test_db:
+    "mongodb://product:infra28@ds111441.mlab.com:11441/auth-infra-server-test"
 useGoogleAuth: true
 
 # Note that you MUST have either security question or 
