--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,19 @@ version: 2
 jobs:
   backend_test:
       docker:
-        - image: node:8.4.0
+        - image: node:11.14.0
       dependencies:
         override:
           - echo $PATH
       steps:
         - checkout
         - run:
-            command: |
-              cd test
-              npm install
-              npm run test
+            name: Install Dependencies 
+            command: yarn install
+        - run:
+            name: Run Backend Tests
+            command: yarn test
+        
 workflows:
   version: 2
   build-test:
