--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ node_modules
 package-lock.json
 yarn-error.log
 .DS_Store
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
