--- a/config/defaultroles.yml
+++ b/config/defaultroles.yml
@@ -19,7 +19,11 @@ useGoogleAuth: true
 
 # Note that you MUST have either security question or 
 # gmail sent to true
-security_question:
-    true
+security_questions:
+    - Do you love this shit?
+    - Are you high right now?
+    - Do you ever get nervous?
+    - Are you single?
+    - I heard you fucked your girl, is it true?
 gmail:
     true
