--- a/config.yml
+++ b/config.yml
@@ -9,21 +9,12 @@ roles:
     supervisor: 
         - guest
     guest: 
-
-test_db:
-    "mongodb://product:infra28@ds111441.mlab.com:11441/auth-infra-server-test"
-prod_db:
-    "mongodb://product:infra28@ds125385.mlab.com:25385/auth-infra"
-
-useGoogleAuth: true
-
-# Note that you MUST have either security question or 
-# gmail sent to true
 security_questions:
     - Do you love this shit?
     - Are you high right now?
     - Do you ever get nervous?
     - Are you single?
     - I heard you fucked your girl, is it true?
-gmail:
-    true
+useGoogleAuth: true
+security_question: true
+gmail: true
