--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "type": "git",
     "url": "https://github.com/hack4impact-uiuc/infra-authentication-server.git"
   },
+  "standard": {
+    "globals": [
+      "before",
+      "after",
+      "it",
+      "describe"
+    ]
+  },
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
@@ -22,6 +30,7 @@
     "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
