--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
         - run:
             name: Install Dependencies 
             command: yarn install
-        - run:
-            name: Run Backend Tests
-            command: yarn test
+#        - run:
+#            name: Run Backend Tests
+#            command: yarn test
         
 workflows:
   version: 2
