--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ package-lock.json
 yarn-error.log
 .DS_Store
 lib
+
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
